﻿0.7.0-RC10 (???nd of May 2019)
----------------------------------------------------------

Code
----------------------------------------------------------
- Massive refactoring by Lord Brimstone
- Lots of obscure bugfixes during refactoring by Lord Brimstone

Content
-----------------------------------------------------------
- Lots of obscure bugfixes during refactoring by Lord Brimstone
- Basic saytr themes for halfmen nations - this is almost all Strabo's work
- Barebone dryad casters for satyr-themed halfmen



0.7.0-RC9 (22nd of January 2019)
----------------------------------------------------------

Code
----------------------------------------------------------
- Priests are now much more common as the T2 PD commander - ~75% instead of ~10%. This is in keeping with Dom5 numbers. T1 priests remain scarce. No priest-mages yet, but that's the next logical step.
- Small, obscure bugfixes

Content
-----------------------------------------------------------
- Merrow nations, with themes - no archers, but some land/amphibious mounted units
- Imperial casters now have distinctive robes; they look a bit odd sometimes with default hats but we're getting there
- Assorted bugfixes

0.7.0-RC8 (5th of November 2018)
----------------------------------------------------------

Code
----------------------------------------------------------
- More variety in number of ranks of PD (TODO: more variety in PD/castle commanders)
- A whole bunch of refactoring, optimization, and minor UI improvements from flash-fire. Details of this stuff is on the github site.

Content
-----------------------------------------------------------
- Cyclops nations: for now just younger cyclopes
- More ichtyid subtypes from Strabo: clownfishmen, pikemen, flying-fishmen, sailfishmen, anglerfishmen, perchmen, piranamen, sharkmen, catfishmen, tunamen, and swordfishmen
- Lictor-style non-legionaire sacreds for imperial nations