@@ -10,6 +10,7 @@
 #spritegenpose meticinfantry
 #spritegenpose meticranged
 
+#theme central
 #central
 
 #racethemes amazon_themes
