@@ -64,4 +64,6 @@
 
 #description "The Avvim are a people strong and beautiful of mind and body, said to have learned the secrets of science from the Angels."
 
+#giant
+
 #endrace
