@@ -48,6 +48,8 @@
 
 #monsterchance 0.01
 
+#theme boreal
 #boreal
+#human
 
 #endrace
