@@ -58,6 +58,9 @@
 #threeprimarychance 0.025
 
 #monsterchance 0.01
+
+#theme central
 #central
+#giant
 
 #endrace
