@@ -40,6 +40,7 @@
 #specialcommanderfilters default_specialcommanderfilters
 #specialcommanderfilters specialcommanderfilters_extended
 
+#theme dynastic
 #dynastic
 
 #endrace
