@@ -51,4 +51,8 @@
 #sacredrangerchance 0.1
 
 #monsterchance 0.01
+
+#theme boreal
+#boreal
+
 #endrace
