@@ -46,4 +46,9 @@
 #threeprimarychance 0.025
 
 #monsterchance 0.01
+
+#theme boreal
+#boreal
+#giant
+
 #endrace
