@@ -36,4 +36,5 @@
 #threeprimarychance 0.025
 
 #monsterchance 0.01
+
 #endrace
