@@ -33,9 +33,11 @@
 
 #unitcommand "#nametype 102"
 
+#theme
 #boreal
 #human
 #gods europegods
 #specialcommanderfilters default_specialcommanderfilters
 #specialcommanderfilters specialcommanderfilters_extended
+
 #endrace
