@@ -33,6 +33,7 @@
 
 #unitcommand "#nametype 106"
 
+#theme imperial
 #human
 #imperial
 #specialcommanderfilters default_specialcommanderfilters
