@@ -71,6 +71,7 @@
 #chanceinc primaryrace "Austral human" *3
 #chanceinc race "Dynastic human" *3
 
+#theme dynastic
 #dynastic
 #serpent
 
