@@ -37,7 +37,8 @@
 
 #gods southerngods
 
-#human
+#theme austral
 #austral
+#human
 
 #endrace
