@@ -43,7 +43,8 @@
 
 #nationcommand "#uwbuild 1"
 #nationcommand "#riverstart"
-#amphibian
+#theme boreal
 #boreal
+#amphibian
 
 #endrace
