@@ -41,6 +41,7 @@
 #nationcommand "#likespop 83"
 
 #generationchance ranged 0.125
+#bonussacreds 1
 
 #gods westerngods
 #forts default_forts
@@ -59,6 +60,8 @@
 #chanceinc primaryrace Atlantian *10
 #chanceinc primaryrace Zotz *15
 
+#theme occidental
+#occidental
 #amphibian
 
 #endrace
