@@ -36,6 +36,7 @@
 #strongmagicpatterns
 
 #sacredchariotchance 0.1
+#bonussacreds 1
 
 #gods monkeygods
 #forts default_forts
