@@ -18,6 +18,7 @@
 #suffixes /data/names/nations/oriental/suffixes.txt
 
 #human
+#theme oriental
 #oriental
 
 #unitcommand "#nametype 134"
