@@ -23,6 +23,8 @@
 
 #extrapdmulti 0.5
 
+#theme boreal
+#boreal
 #fae
 
 #longsyllables /data/names/nations/fomorian/longsyllables.txt
