@@ -2,6 +2,7 @@
 #name "Tengu"
 #basechance 0.1
 
+#theme oriental
 #oriental
 
 #pose tengumages
