@@ -64,6 +64,7 @@
 
 #monsterchance 0.01
 
+#theme boreal
 #boreal
 
 #endrace
