@@ -2,6 +2,8 @@
 #name "Zotz"
 #basechance 0.1
 
+#theme occidental
+#occidental
 #subterranean
 
 -- 20% H1/32% H2/48% H3 max priest level
@@ -37,8 +39,6 @@
 #unitcommand "#patrolbonus -1"
 #unitcommand "#douse 1"
 -- #unitcommand "#stealthy +40" -- Zotz get their stealth (if eligible) via their poses/mount slot to prevent heavy troops/(some) cavalry from being stealthy
-
-#occidental
 
 #nationcommand "#idealcold -1"
 
