@@ -48,6 +48,7 @@
 #racedefinition "#visiblename Ghoul"
 #racedefinition "#theme undead"
 #racedefinition "#theme ghoul"
+#racedefinition "#undead"
 #endtheme
 
 -- Weights: EA 0.5, MA 0.5, LA 0.5
