@@ -59,6 +59,7 @@
 #racedefinition "#magicpriority death 8"
 #racedefinition "#nationcommand '#idealcold +2'"
 #racedefinition "#extrapdmulti 0.25"
+#racedefinition "#undead"
 #endtheme
 
 
