@@ -84,6 +84,7 @@
 #racedefinition "#magicpriority fire 7.5"
 #racedefinition "#magicpriority astral 5"
 #raceprefix "dustwalker"
+#racedefinition "#undead"
 #endtheme
 
 -- Dustwalkers and human slaves
@@ -112,6 +113,7 @@
 #racedefinition "#magicpriority astral 5"
 #raceprefix "dustwalker"
 #racedefinition "#slaver"
+#racedefinition "#undead"
 #endtheme
 
 -- Dustwalker elites and human troops
@@ -139,6 +141,8 @@
 #racedefinition "#magicpriority fire 7.5"
 #racedefinition "#magicpriority astral 7.5"
 #racedefinition "#slaver"
+#racedefinition "#undead"
+#racedefinition "#human"
 #endtheme
 
 -- Dustwalkers T3/sacreds and humans
