@@ -228,6 +228,7 @@
 #racedefinition "#nationcommand '#idealcold -1'"
 #racedefinition "#nationcommand '#gods westerngods'"
 #racedefinition "#nationcommand '#likespop 82'"
+#racedefinition "#bonussacreds 2"
 #racedefinition "#occidental"
 #racedefinition "#forts default_forts"
 #racedefinition "#forts city_forts"
