@@ -99,11 +99,13 @@
 #newtheme
 #type demographic
 #name piranhamen
+#theme occidental
 #basechance 1
 #racedefinition "#longsyllables /data/names/nations/nahuatl/longsyllables.txt"
 #racedefinition "#shortsyllables /data/names/nations/nahuatl/shortsyllables.txt"
 #racedefinition "#suffixes /data/names/nations/nahuatl/suffixes.txt"
 #racedefinition "#nationcommand '#gods westerngods'"
+#racedefinition "#bonussacreds 1"
 #racedefinition "#occidental"
 #racedefinition "#nationcommand '#idealcold -1'"
 #racedefinition "#pose piranhidtroops"
@@ -147,6 +149,7 @@
 #type demographic
 #name catfishmen_oriental
 #basechance 0.5
+#theme oriental
 #racedefinition "#longsyllables /data/names/nations/oriental/longsyllables.txt"
 #racedefinition "#shortsyllables /data/names/nations/oriental/shortsyllables.txt"
 #racedefinition "#suffixes /data/names/nations/oriental/suffixes.txt"
@@ -163,10 +166,12 @@
 #type demographic
 #name catfishmen_occidental
 #basechance 0.5
+#theme occidental
 #racedefinition "#longsyllables /data/names/nations/nahuatl/longsyllables.txt"
 #racedefinition "#shortsyllables /data/names/nations/nahuatl/shortsyllables.txt"
 #racedefinition "#suffixes /data/names/nations/nahuatl/suffixes.txt"
 #racedefinition "#nationcommand '#gods westerngods'"
+#racedefinition "#bonussacreds 1"
 #racedefinition "#occidental"
 #racedefinition "#pose siluriformidtroops"
 #racedefinition "#pose siluriformidmages"
