@@ -238,6 +238,7 @@
 #racedefinition "#forts default_forts"
 #racedefinition "#forts city_forts"
 #racedefinition "#nationcommand '#likespop 82'"
+#racedefinition "#bonussacreds 2"
 #racedefinition "#tag 'occidental'"
 #raceprefix vanara
 #racedefinition "#extrapdmulti 8"
