@@ -114,6 +114,7 @@
 #racedefinition "#shortsyllables /data/names/nations/nahuatl/shortsyllables.txt"
 #racedefinition "#unitcommand '#nametype 123'"
 #racedefinition "#nationcommand '#gods westerngods'"
+#racedefinition "#bonussacreds 1"
 #racedefinition "#occidental"
 #racedefinition "#forts default_forts"
 #racedefinition "#forts city_forts"
