@@ -71,6 +71,8 @@
 #racedefinition "#preferredmount deer"
 #racedefinition "#nationcommand '#likespop 62'"
 #racedefinition "#descr 'These vaettir have the acute sense and cautious mentality of the deer, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.5, LA 0.25
@@ -104,6 +106,8 @@
 #racedefinition "#preferredmount bear"
 #racedefinition "#nationcommand '#likespop 79'"
 #racedefinition "#descr 'These vaettir have the strength and fortitude of the bear, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.5, LA 0.5
@@ -136,6 +140,8 @@
 #racedefinition "#preferredmount wolf"
 #racedefinition "#nationcommand '#likespop 78'"
 #racedefinition "#descr 'These vaettir have the battle prowress and stamina of the wolf, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.5, LA 0.25
@@ -168,6 +174,8 @@
 #racedefinition "#magicpriority astral 1"
 #racedefinition "#preferredmount boar"
 #racedefinition "#descr 'These vaettir have the brute strength and savage rage of the boar, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.25, LA 0.125
@@ -202,6 +210,8 @@
 #racedefinition "#magicpriority blood 1"
 #racedefinition "#preferredmount hawk"
 #racedefinition "#descr 'These vaettir have the keen eyes and fragile build of the hawk, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.25, LA 0.125
@@ -234,6 +244,8 @@
 #racedefinition "#preferredmount spider"
 #racedefinition "#nationcommand '#likespop 37'"
 #racedefinition "#descr 'These vaettir have the devious cunning and remarkable maneuverability of the spider, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.25, LA 0.125
@@ -269,6 +281,8 @@
 #racedefinition "#nationcommand '#likespop 80'"
 #racedefinition "#nationcommand '#idealcold +1'"
 #racedefinition "#descr 'These vaettir have the endurance of the lion, their tribal totem, and can travel far without rest.  '"
+#racedefinition "#theme austral"
+#racedefinition "#austral"
 #endtheme
 
 -- Weights: EA 1, MA 0.25, LA 0.125
@@ -301,6 +315,8 @@
 #racedefinition "#magicpriority blood 1"
 #racedefinition "#preferredmount tiger"
 #racedefinition "#descr 'These vaettir have the strength and determination of the tiger, their tribal totem.  '"
+#racedefinition "#theme enlightened"
+#racedefinition "#enlightened"
 #endtheme
 
 -- Weights: EA 1, MA 0.25, LA 0.125
@@ -334,6 +350,8 @@
 #racedefinition "#magicpriority astral 1"
 #racedefinition "#magicpriority blood 1"
 #racedefinition "#descr 'These vaettir have the fecundity and timid agility of the rabbit, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 1, MA 0.5, LA 0.5
@@ -364,6 +382,8 @@
 #racedefinition "#magicpriority astral 1"
 #racedefinition "#magicpriority blood 1"
 #racedefinition "#descr 'These vaettir have the wary vigor of the rat, their tribal totem. '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 0.5, MA 1.5, LA 4
@@ -391,6 +411,8 @@
 #racedefinition "#magicpriority astral 7"
 #racedefinition "#magicpriority blood 5"
 #racedefinition "#descr 'These vaettir have turned their back on both superstition and tradition, and no longer honor the totemic spirits.  '"
+#racedefinition "#theme boreal"
+#racedefinition "#boreal"
 #endtheme
 
 -- Weights: EA 0.25, MA 0.25, LA 0.25
