@@ -5,12 +5,15 @@ Code
 ----------------------------------------------------------
 - Massive refactoring by Lord Brimstone
 - Lots of obscure bugfixes during refactoring by Lord Brimstone
+- Nations should no longer get ranged sacreds if they only have one sacred unless no other sacreds are possible
 
 Content
 -----------------------------------------------------------
 - Lots of obscure bugfixes during refactoring by Lord Brimstone
 - Basic saytr themes for halfmen nations - this is almost all Strabo's work
 - Barebone dryad casters for satyr-themed halfmen
+- Occidental hoburg nations always get at least three sacreds
+- Muuch, naga, and assorted occidental ichtyids and serpentmen get at least two sacreds
 
 
 
